# GreenKube

./: .dockerignore  .gitignore  .gitleaksignore  .pre-commit-config.yaml  .trivyignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  artifacthub-repo.yml  coverage.json  current_task.md  docker-compose.test.yml  greenkube-0.1.0.tgz  greenkube-0.1.4.tgz  greenkube-0.1.6.tgz  greenkube-0.1.7.tgz  greenkube-0.2.0.tgz  greenkube-0.2.10.tgz  greenkube-0.2.11.tgz  greenkube-0.2.12.tgz  greenkube-0.2.8.tgz  greenkube-0.2.9.tgz  index.yaml  pyproject.toml  show-hn-plan.md
.github/workflows/: ci-cd.yml  ci.yml  dev-build.yml  release.yml  security.yml
dashboards/: greenkube-grafana.json
docs/: api.md  apply-recommendations-spec.md  architecture.md  cli.md  configuration.md  grafana.md  power_estimation_methodology.md  prometheus-grafana.md  recommendation.md  sustainability-score.md  testing.md
docs/specs/: grafana-dashboard-specs.md
frontend/: .gitignore  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.js
frontend/src/: app.css  app.html
frontend/src/lib/: api.js  charts.js  reportOptions.js  stores.js
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/tests/lib/: api.test.js  charts.test.js  reportOptions.test.js  stores.test.js
frontend/tests/mocks/: app-stores.js
frontend/tests/routes/: report-page.test.js
helm-chart/: Chart.yaml  values.yaml
helm-chart/templates/: NOTES.txt  _helpers.tpl  api-service.yaml  clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  deployment.yaml  hook-rbac.yaml  networkpolicy.yaml  post-install-hook.yaml  postgres-service.yaml  postgres-statefulset.yaml  pre-install-check.yaml  prometheus-rbac.yaml  pvc.yaml  role.yaml  rolebinding.yaml  secret.yaml  serviceaccount.yaml  servicemonitor.yaml
helm-chart/templates/tests/: test-connection.yaml
helm-chart/tests/: configmap_test.yaml  deployment_test.yaml  helpers_test.yaml  monitoring_test.yaml  postgres_test.yaml  rbac_test.yaml  secret_test.yaml  services_test.yaml
scripts/: build_grafana_dashboard.py  init_db.py  pg_upgrade_17_to_18.sh  release.sh  sync_version.py  test_deployments.sh
src/greenkube/: cli.py
src/greenkube/api/: app.py  dependencies.py  metrics_endpoint.py  schemas.py  startup.py
src/greenkube/cli/: __init__.py  demo.py  main.py  recommend.py  report.py  start.py  utils.py
src/greenkube/collectors/: __init__.py  base_collector.py  boavizta_collector.py  electricity_maps_collector.py  hpa_collector.py  kepler_collector.py  node_collector.py  opencost_collector.py  pod_collector.py  prometheus_collector.py
src/greenkube/core/: config.py  (+25 more)
tests/: conftest.py  test_aggregator.py  test_cli.py  test_cli_report.py  test_console_reporter_aggregation.py  test_grafana_dashboard.py  test_grafana_dashboard_golden_signal.py  test_helm_monitoring.py  test_report_flags.py
tests/api/: conftest.py  test_config_version.py  test_dashboard_summary.py  test_health.py  test_health_services.py  test_kube_state_metrics_labels.py  test_metrics.py  test_namespaces.py  test_nodes.py  test_prometheus_metrics.py  test_prometheus_metrics_comprehensive.py  test_recommendation_history.py  test_recommendations.py  test_report.py  test_security.py  test_startup.py  test_timeseries.py
tests/ci/: test_docker_apt_cache_bust.py
tests/cli/: test_cli.py  test_cli_cicd.py  test_cli_report.py  test_report_flags.py  test_start_analyze_nodes.py  test_start_async.py  test_start_tasks.py  test_utils.py
tests/collectors/: test_boavizta_collector.py  test_discovery.py  test_electricity_maps_collector.py  test_hpa_collector.py  test_kepler_collector.py  test_node_collector.py  test_opencost_collector.py  test_opencost_collector_range.py  test_opencost_detection.py  test_pod_collector.py  test_pod_collector_storage.py  test_prometheus_collector.py  test_prometheus_detection.py  test_resource_metrics_collection.py
tests/core/: test_aggregator.py  test_calculator.py  test_calculator_async_lock.py  test_calculator_cache.py  test_calculator_date_parsing.py  test_collection_orchestrator.py  test_combined_metric_resources.py  test_config.py  test_cost_normalizer.py  test_database_integration.py  test_embodied_fallback.py  test_factory.py  test_factory_coverage.py  test_health.py  test_k8s_client.py  test_k8s_secret_store.py  test_metric_assembler.py  test_metrics_compressor.py  test_migration_runner.py  test_orchestration_phases.py  test_processor.py  test_processor_defaults.py  test_processor_estimation_flags.py  test_processor_historical_nodes.py  test_processor_offline.py  test_processor_resource_metrics.py  test_processor_run_range.py  test_pue_handling.py  test_recommendation_lifecycle.py  test_recommender.py  test_recommender_hpa.py  test_recommender_profiles.py  test_recommender_v2.py  test_savings_attributor.py  test_scheduler.py  test_scheduler_coverage.py  test_summary_refresher.py  test_sustainability_score.py
tests/demo/: test_cli_demo.py  test_data_generator.py  test_runner.py
tests/energy/: test_default_profile.py  test_estimator.py  test_region_mapping_pydantic.py
tests/exporters/: test_csv_exporter.py  test_json_exporter.py
tests/grafana/: test_grafana_dashboard.py  test_grafana_dashboard_first_view.py  test_grafana_dashboard_golden_signal.py
tests/helm/: test_helm_monitoring.py
tests/integration/: test_api_e2e.py  test_prometheus_k8s_integration.py  test_real_database_repositories.py  test_recommendation_lifecycle_e2e.py  test_sqlite_migrations.py
tests/reporters/: test_console_reporter.py
tests/storage/: test_base_repository_defaults.py  test_elasticsearch_node_repository.py  test_elasticsearch_repository.py  test_embodied_repository.py  test_node_repository.py  test_node_repository_timestamp.py  test_postgres_node_repository.py  test_postgres_repository.py  test_recommendation_repository.py  test_sqlite_repository.py  test_sqlite_repository_timezone.py  test_sqlite_savings_repository.py  test_summary_repository_sqlite.py  test_timeseries_cache_repository_sqlite.py
tests/utils/: test_k8s_utils.py  test_log.py
(+120 files in other folders)
