# Central configuration file for the GreenKube project
# Uses PEP 621 standard for project metadata

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "greenkube"
version = "0.2.2"
authors = [
  { name = "Hugo Lelievre", email = "hugo.lelievre.56@gmail.com" },
]
description = "Measure, understand, and reduce the carbon footprint of your Kubernetes infrastructure."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Monitoring",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

# Production dependencies
# These are the libraries required for the tool to run
dependencies = [
    "typer[all]>=0.9.0", # For building a clean command-line interface (CLI)
    "httpx>=0.25.0",  # Async HTTP client
    "pydantic>=2.4.0",   # For data validation and modeling
    "rich>=13.5.0",      # For displaying beautiful tables and text in the terminal
    "python-dotenv>=1.0.0", # For loading environment variables from .env files
    "asyncpg>=0.28.0", # Async PostgreSQL database adapter
    "aiosqlite>=0.19.0", # Async SQLite driver
    "kubernetes_asyncio>=28.0.0", # Async Kubernetes client
    "anyio>=4.0.0", # High level async library
    "elasticsearch>=8.10.0", # Elasticsearch client
    "elasticsearch-dsl>=8.10.0",
    "aiofiles>=23.2.0", # Async file I/O
    "fastapi>=0.109.0", # Web API framework
    "uvicorn[standard]>=0.25.0", # ASGI server for FastAPI
    "prometheus_client>=0.19.0", # Prometheus metrics exposition
    "slowapi>=0.1.9", # Rate limiting for FastAPI
    "packaging>=23.0", # Required by limits/slowapi on Python 3.14+
]

[project.optional-dependencies]
test = [
    "respx",
    "pytest-asyncio",
    "pytest>=7.0",
    "pytest-mock",
]
dev = [
    "pre-commit", 
    "ruff",
    "toml",
    "ruamel.yaml",
]

[project.urls]
"Homepage" = "https://github.com/GreenKubeCloud/greenkube"
"Bug Tracker" = "https://github.com/GreenKubeCloud/greenkube/issues"

# CLI entry point
# This creates the `greenkube` command in the user's terminal
[project.scripts]
greenkube = "greenkube.cli.main:app"
greenkube-api = "greenkube.api.app:main"

# Development tool configuration (optional but recommended)
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
asyncio_mode = "auto"
filterwarnings = [
    # Ignore RuntimeWarning from AsyncMock internals (Python 3.11+ issue with coroutines)
    "ignore:coroutine 'AsyncMockMixin._execute_mock_call' was never awaited:RuntimeWarning",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.hatch.version]
path = "src/greenkube/__init__.py"

[tool.ruff]
# Formatting and linting rules for clean code
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "G"] # Basic rules + flake8-logging-format (lazy %-formatting)

[tool.ruff.lint.per-file-ignores]
# Allow f-string logging in data loaders (one-time startup, not perf-sensitive)
"src/greenkube/data/*.py" = ["G"]
